syntax = "proto3";

package order_executor;

service OrderExecutor {
  rpc ExecuteOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
}

message OrderResponse {
  string status = 1;
}
